--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <input type="text" id="input-field" placeholder="Bread">
-    <button id="add-button">Add to cart</button>
-    <script src="index.js"></script>
+    <button id="add-btn">Add to cart</button>
+    <script src="main.js"></script>
 </body>
 
 </html>
