--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    <input type="text" id="input-field" placeholder="Bread">
-    <button id="add-btn">Add to cart</button>
+    <div class="container">
+        <img src="/assets/cat.png" alt="images">
+        <input type="text" id="input-field" placeholder="Product..">
+        <button id="add-btn">Voeg toe</button>
+    </div>
+
     <script src="main.js"></script>
 </body>
 
