--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="add-btn">Voeg toe</button>
     </div>
 
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
