--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
 <body>
     <div class="container">
-        <img src="/assets/cat.png" alt="images">
+        <lord-icon src="https://cdn.lordicon.com/lwumwgrp.json" trigger="hover" colors="primary:#ffc738,secondary:#ac485a,tertiary:#ffffff" style="width:150px;height:150px"></lord-icon>
         <input type="text" id="input-field" placeholder="Product..">
         <button id="add-btn">Voeg toe</button>
     </div>
 
     <script src="main.js" type="module"></script>
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
 </body>
 
 </html>
