--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <lord-icon src="https://cdn.lordicon.com/lwumwgrp.json" trigger="hover" colors="primary:#ffc738,secondary:#ac485a,tertiary:#ffffff" style="width:100px;height:100px"></lord-icon>
         <input type="text" id="input-field" placeholder="Product..">
         <button id="add-btn">Voeg toe</button>
+        <ul id="shopping-list">
+            <li>Appels</li>
+            <li>Tomaat</li>
+        </ul>
     </div>
 
     <script src="main.js" type="module"></script>
