--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="container">
         <lord-icon src="https://cdn.lordicon.com/lwumwgrp.json" trigger="hover" colors="primary:#ffc738,secondary:#ac485a,tertiary:#ffffff" style="width:100px;height:100px"></lord-icon>
+        
         <input type="text" id="input-field" placeholder="Product..">
-        <button id="add-btn">Voeg toe</button>
+        <button id="add-button">Voeg toe</button>
         <ul id="shopping-list">
         </ul>
     </div>
