--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>My First Mobile App</title>
 </head>
 
 <body>
     <div class="container">
-        <lord-icon src="https://cdn.lordicon.com/lwumwgrp.json" trigger="hover" colors="primary:#ffc738,secondary:#ac485a,tertiary:#ffffff" style="width:100px;height:100px"></lord-icon>
+        <lord-icon
+        src="https://cdn.lordicon.com/afqjkqgo.json"
+        trigger="hover"
+        colors="primary:#b26836,secondary:#2ca58d,tertiary:#ac485a"
+        style="width:100px;height:100px">
+    </lord-icon>
         
         <input type="text" id="input-field" placeholder="Product..">
         <button id="add-button">Voeg toe</button>
