--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -13,12 +16,11 @@
 
 <body>
     <div class="container">
-        <lord-icon
-        src="https://cdn.lordicon.com/afqjkqgo.json"
-        trigger="hover"
-        colors="primary:#b26836,secondary:#2ca58d,tertiary:#ac485a"
-        style="width:100px;height:100px">
-    </lord-icon>
+        <div class="logo">
+            <i class="ri-shopping-basket-2-line"></i>
+        </div>
+
+        <lord-icon src="https://cdn.lordicon.com/afqjkqgo.json" trigger="hover" colors="primary:#b26836,secondary:#2ca58d,tertiary:#ac485a" style="width:100px;height:100px"></lord-icon>
         
         <input type="text" id="input-field" placeholder="Product..">
         <button id="add-button">Voeg toe</button>
@@ -28,6 +30,7 @@
 
     <script src="main.js" type="module"></script>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 
 </html>
